--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
   <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/">Home</a>
-      <a class="nav-item nav-link" routerLink="/configure">Configure</a>
+      <!-- <a class="nav-item nav-link" routerLink="/configure">Configure</a> -->
       <a href="/login" class="nav-item nav-link" (click)="logout()">Logout</a>
   </div>
 </nav>
