--- a/src/app/configure/configure.component.html
+++ b/src/app/configure/configure.component.html
@@ -2,9 +2,10 @@
   <button (click)="displayConfirmation()" class="btn btn-primary btn-xl btn-block">Sync</button>
 </p>
 
-<!-- <div class="alert alert-success" *ngIf="this.logService.getIsSyncing()"> -->
   <div class="alert alert-success center-block" *ngIf="didStartSync">
   <h4>
       {{syncingMessage}}
   </h4>
+  
 </div>
+<p>There are {{syncingCount}} item(s) left to sync.</p>
