--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -111,7 +111,7 @@
                                 <div class="col-md-12">
                                     <p>
                                         <button type="submit" class="btn btn-primary btn-xl btn-block"
-                                            [disabled]="form.invalid">Add</button>
+                                            >Add</button>
                                     </p>
                                 </div>
                             </div>
