Add versioning and auto update.

--- a/src/app/configure/configure.component.html
+++ b/src/app/configure/configure.component.html
@@ -7,3 +7,4 @@
     </h1>
 </div>
 <p [@simpleFadeAnimation]="'in'">There are {{syncingCount}} item(s) left to sync.</p>
+<p [@simpleFadeAnimation]="'in'">App version: {{version}}</p>
